--- a/scripts/Project.vcxproj
+++ b/scripts/Project.vcxproj
@@ -91,6 +91,7 @@
     <ClCompile Include="..\src\ply.c" />
     <ClCompile Include="..\src\ProgramShader.cpp" />
     <ClCompile Include="..\src\Project.cpp" />
+    <ClCompile Include="..\src\SkyBox.cpp" />
     <ClCompile Include="..\src\TextureCube.cpp" />
     <ClCompile Include="..\src\Texture.cpp" />
     <ClCompile Include="..\src\Utils.cpp" />
@@ -105,6 +106,7 @@
     <ClInclude Include="..\src\Mesh.h" />
     <ClInclude Include="..\src\ply.h" />
     <ClInclude Include="..\src\ProgramShader.h" />
+    <ClInclude Include="..\src\SkyBox.h" />
     <ClInclude Include="..\src\TextureCube.h" />
     <ClInclude Include="..\src\Texture.h" />
     <ClInclude Include="..\src\Utils.h" />
@@ -119,6 +121,7 @@
     <None Include="shaders\cubeMapping-v1.glsl" />
     <None Include="shaders\cubeMapping-v6.glsl" />
     <None Include="shaders\fragment.glsl" />
+    <None Include="shaders\skybox.glsl" />
     <None Include="shaders\sphereMapping.glsl" />
     <None Include="shaders\vertex.glsl" />
   </ItemGroup>
@@ -133,6 +136,8 @@
     <Image Include="textures\SkyBox\cubeMap-top.tga" />
     <Image Include="textures\sphereMap.tga" />
     <Image Include="textures\stone.tga" />
+    <Image Include="textures\stone2.tga" />
+    <Image Include="textures\stone2_normal.tga" />
     <Image Include="textures\stone_normal.tga" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
